# opencl-vector-field

./: .gitignore  .gitmodules  CMakeLists.txt  Functions  README.md  main.cpp
Application/: Application.cpp  Application.hpp
Misc/: BivariateFunction.hpp  Constants.hpp
OpenCL/: opencl.cpp  opencl.hpp
ParticleEngine/: ParticleEngine.cpp  ParticleEngine.hpp
Plot/: Plot.cpp  Plot.hpp
kernels/: particle_engine.cl  particle_position_update.cl  runge_kutta.cl
misc/: constants.hpp  heat_map_colouring.cpp  heat_map_colouring.hpp  vector_computation.cpp  vector_computation.hpp
scripts/: get_main_cpp_file.py  get_particle_engine_kernel_file.py  get_particle_motion_kernel_file.py  init.py
